# webharvest

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/webharvest/: cli.py  http.py  robots.py
src/webharvest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/webharvest/spiders/: books.py  quotes.py
src/webharvest/storage/: sqlite.py
tests/: sample_books.html  sample_quotes.html  test_books_parser.py  test_quotes_parser.py  test_sqlite.py  test_sqlite_books.py
