[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webharvest"
version = "0.1.0"
description = "Async web scraper with a clean CLI (learning project)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["rich>=13.7.1", "click>=8.2.1", "httpx[http2]>=0.27.0", "beautifulsoup4>=4.12.3", "lxml>=5.2.2"]

[project.optional-dependencies]
dev = ["pytest>=8.1.0", "ruff>=0.5.7", "black>=24.8.0"]

[project.scripts]
webharvest = "webharvest.cli:app"

[tool.ruff]
line-length = 100
[tool.black]
line-length = 100
